# streamlit-test

./: README.md  main.py  notebook.ipynb  pyproject.toml
data/: cafe.csv
lib/: __init__.py  dataframe_demo.py
pages/: 1_📊_DataFrame.py  2_📈_Plotting.py  3_🗺️_Mapping.py  4_🎨_Animation.py  5_❓_PageIcon説明.py  6_年利計算.py  sample1.py
src/: animation.py  dataframe.py  mapping.py  plotting.py  sample1.py  sample2.py
