[project]
name = "streamlit-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.18.2",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff]
# ターゲットPythonバージョン
target-version = "py312"

# 1行あたりの最大文字数
line-length = 100

[tool.ruff.lint]
# 有効にするルール
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
    "FBT003",
    "PLR2004",
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

[tool.ruff.format]
# フォーマット設定
quote-style = "double"
indent-style = "space"
line-ending = "auto"
