[project]
name = "streamlit-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.18.2",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "taskipy>=1.14.1",
    "watchdog>=6.0.0",
]

[tool.ruff]
# ターゲットPythonバージョン
target-version = "py312"

# 1行あたりの最大文字数
line-length = 120

[tool.ruff.lint]
# 有効にするルール
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "N",     # naming
    "Q",     # flake8-quotes
    "RUF100",# ruff-specific rules
    "D",     # pydocstyle
    "TD",    # todo
    "PD",    # pandas-vet
]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

[tool.ruff.format]
# フォーマット設定
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.taskipy.tasks]
# Linting and formatting
lint = "ruff check ."
format = "ruff format ."
fix = "ruff check --fix ."

# Type checking
type = "mypy ."

# Testing
test = "pytest"
test-v = "pytest -v"
test-cov = "pytest --cov=src --cov-report=term-missing"

# Combined tasks
check = "task lint && task type"
fix-all = "task fix && task format"
qa = "task fix-all && task type && task test"

# Run application
dev = "streamlit run main.py"
sample1 = "streamlit run src/sample1.py"
